# autobus

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
autobus/: __init__.py  client.py  serlializer.py
autobus/transport/: __init__.py  base.py  multicast.py  redis.py
tests/: conftest.py  test_crypto.py  test_multicast.py  test_redis.py  test_scheduler.py
