[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autobus"
version = "1.0.0"
authors = [
  { name="Schuyler Erle", email="schuyler@nocat.net" },
]
description = "A lightweight, networked, opinionated event bus for Python 3"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pydantic",
  "schedule"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio"
]
crypto = [
  "cryptography"
]
redis = [
  "redis>=4.2.0"
]
all = [
  "redis>=4.2.0",
  "cryptography"
]

[project.urls]
"Homepage" = "https://github.com/schuyler/autobus"
"Bug Tracker" = "https://github.com/schuyler/autobus/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
